change waring to red

--- a/Swallab/backstage/management_menu1.html
+++ b/Swallab/backstage/management_menu1.html
@@ -82,7 +82,7 @@
                             <div class="col-4">
                                 <h5>價格 : </h5>
                                 <input id="menuPrice1" type="number" name="menuPrice1">
-                                <p>原始價格為 : <span id="originalPrice1"></span></p>
+                                <p>原始價格為 : <span id="originalPrice1"></span><span style="color: #f00;" id="myResult"></span></p>
                             </div>
                             <div class="col-6">
                                 <h5>開始時間 : </h5>
