--- a/MySwallab/public/Swallab/myHistory/myHistory_React_Final.html
+++ b/MySwallab/public/Swallab/myHistory/myHistory_React_Final.html
@@ -363,24 +363,33 @@
                                 break;
                             case 'Comments':
                                 // type = 'comment';
+                                console.log('in switch activeTab:', activeTab);
                                 console.log('in switch', result.data);
                                 processedData = result.data?.map(item => {
                                     if (item.rest_infos) {
+                                        console.log('in switch item', item);
                                         return { ...item, type: 'restComment' };
                                     } else {
+                                        console.log('in switch item', item);
                                         return { ...item, type: 'noteComment' };
                                     }
                                 }) || [];
+                                console.log('in switch', processedData);
                                 break;
                             case 'Favorites':
-                                type = 'favorite';
+                                // type = 'favorite';
+                                console.log('in switch activeTab:', activeTab);
+                                console.log('in switch data', result.data);
                                 processedData = result.data?.map(item => {
                                     if (item.rest_infos) {
+                                        console.log('in switch item', item);
                                         return { ...item, type: 'restFavorite' };
                                     } else {
+                                        console.log('in switch item', item);
                                         return { ...item, type: 'noteFavorite' };
                                     }
                                 }) || [];
+                                console.log('in switch', processedData);
                                 break;
                             default:
                                 type = activeTab.toLowerCase();
@@ -492,11 +501,12 @@
                 }
             };
 
-            const handleDeleteFavorite = async (id) => {
+            const handleDeleteFavorite = async (id, isRestFavorite) => {
                 const confirmed = window.confirm('確定要移除收藏嗎？');
                 if (confirmed) {
                     try {
-                        const response = await fetch(`${API_BASE_URL}/${endpoint}/${id}`, {
+                        const endpoint = isRestFavorite ? 'RestFavorites' : 'NotesFavorites';
+                        const response = await fetch(`${API_BASE_URL}/member-activity/${endpoint}/${id}`, {
                             method: 'DELETE',
                         });
                         if (!response.ok) {
@@ -554,18 +564,34 @@
                                 <div className="row ms-5 justify-content-center mt-3">
                                     <div className="col-3">
                                         <button
-                                            className={`btn btn-outline-secondary ${commentType === 'rest' ? 'active' : ''}`}
-                                            onClick={() => setCommentType('rest')}
+                                            className={`btn btn-outline-secondary ${(activeTab === 'Comments' && commentType === 'rest') ||
+                                                    (activeTab === 'Favorites' && favoriteType === 'rest') ? 'active' : ''
+                                                }`}
+                                            onClick={() => {
+                                                if (activeTab === 'Comments') {
+                                                    setCommentType('rest');
+                                                } else if (activeTab === 'Favorites') {
+                                                    setFavoriteType('rest');
+                                                }
+                                            }}
                                         >
-                                            餐廳評論
+                                            餐廳
                                         </button>
                                     </div>
                                     <div className="col-3">
                                         <button
-                                            className={`btn btn-outline-secondary ${commentType === 'note' ? 'active' : ''}`}
-                                            onClick={() => setCommentType('note')}
+                                            className={`btn btn-outline-secondary ${(activeTab === 'Comments' && commentType === 'note') ||
+                                                    (activeTab === 'Favorites' && favoriteType === 'note') ? 'active' : ''
+                                                }`}
+                                            onClick={() => {
+                                                if (activeTab === 'Comments') {
+                                                    setCommentType('note');
+                                                } else if (activeTab === 'Favorites') {
+                                                    setFavoriteType('note');
+                                                }
+                                            }}
                                         >
-                                            食記評論
+                                            食記
                                         </button>
                                     </div>
                                 </div>
@@ -600,10 +626,13 @@
                                             case 'note':
                                                 return <MemberNotes key={uniqueKey} note={activity} />;
                                             case 'restComment':
+                                                console.log('Rest comment:', activity.type);
                                                 return <Comments key={uniqueKey} comment={activity} onEdit={handleEditComment} onDelete={handleDeleteComment} isRestComment={true} />;
                                             case 'noteComment':
+                                                console.log('Note comment:', activity.type);
                                                 return <Comments key={uniqueKey} comment={activity} onEdit={handleEditComment} onDelete={handleDeleteComment} isRestComment={false} />;
                                             case 'restFavorite':
+                                                console.log('Rest favorite:', activity.type);
                                                 return <Favorites key={uniqueKey} favorite={activity} onDelete={handleDeleteFavorite} isRestFavorite={true} />;
                                             case 'noteFavorite':
                                                 return <Favorites key={uniqueKey} favorite={activity} onDelete={handleDeleteFavorite} isRestFavorite={false} />;
@@ -807,35 +836,43 @@
         }
 
         function Favorites({ favorite, onDelete, isRestFavorite }) {
-            const restaurantName = isRestFavorite
-                ? favorite.rest_infos?.users?.name
-                : favorite.member_notes?.rest_infos?.users?.name || '未知餐廳';
-            const restaurantImage = isRestFavorite
-                ? favorite.rest_infos?.users?.avatar
-                : favorite.member_notes?.main_photo || '預設圖片URL';
-            const restaurantAddress = isRestFavorite
-                ? favorite.rest_infos?.address
-                : favorite.member_notes?.rest_infos?.address || '地址未知';
-            const restaurantAvgPrice = isRestFavorite
-                ? favorite.rest_infos?.avg_price
-                : favorite.member_notes?.rest_infos?.avg_price || '價格未知';
-            const restaurantOperatingHours = isRestFavorite
-                ? favorite.rest_infos?.wd_operating
-                : favorite.member_notes?.rest_infos?.wd_operating || '營業時間未知';
-            const createdDate = favorite.created_at || '未知日期';
+            // const isRestFavorite = favorite.type === 'restFavorite';
+            const restaurantName = isRestFavorite ? favorite.restaurant.name : favorite.note.restaurant.name;
+            const restaurantImage = isRestFavorite ? favorite.restaurant.avatar : favorite.note.main_photo;
+            const restaurantAddress = isRestFavorite ? favorite.restaurant.address : favorite.note.restaurant.address;
+            const restaurantAvgPrice = isRestFavorite ? favorite.restaurant.avg_price : favorite.note.restaurant.avg_price;
+            const restaurantOperatingHours = isRestFavorite ? favorite.restaurant.wd_operating : favorite.note.restaurant.wd_operating;
+            const createdDate = favorite.created_at;
 
-            const purposes = isRestFavorite
-                ? favorite.rest_infos?.suitable_for?.map(sf => sf.filt_purposes?.purpose).filter(Boolean) || []
-                : [];
+            // const restaurantName = isRestFavorite
+            //     ? favorite.rest_infos?.users?.name
+            //     : favorite.member_notes?.rest_infos?.users?.name || '未知餐廳';
+            // const restaurantImage = isRestFavorite
+            //     ? favorite.rest_infos?.users?.avatar
+            //     : favorite.member_notes?.main_photo || '預設圖片URL';
+            // const restaurantAddress = isRestFavorite
+            //     ? favorite.rest_infos?.address
+            //     : favorite.member_notes?.rest_infos?.address || '地址未知';
+            // const restaurantAvgPrice = isRestFavorite
+            //     ? favorite.rest_infos?.avg_price
+            //     : favorite.member_notes?.rest_infos?.avg_price || '價格未知';
+            // const restaurantOperatingHours = isRestFavorite
+            //     ? favorite.rest_infos?.wd_operating
+            //     : favorite.member_notes?.rest_infos?.wd_operating || '營業時間未知';
+            // const createdDate = favorite.created_at || '未知日期';
+
+            const purposes = isRestFavorite ? favorite.restaurant.purposes : [];
+
+
             return (
                 <div className="row mt-5 myRecordsTemp align-self-center">
+                    {/* 收藏項目的內容 */}
                     <div className="col-2">
                         <div className="myRecordsContainer align-self-center">
                             <img className="activity-image" src={restaurantImage} alt={restaurantName} />
                         </div>
                     </div>
-                    <div className="col-1">
-                    </div>
+                    <div className="col-1"></div>
                     <div className="col-5">
                         <div className="activity-title">
                             <a href="#"><span>{restaurantName}</span></a>
@@ -844,14 +881,15 @@
                             <div><span>地址: {restaurantAddress}</span></div>
                             <div><span>均價: ${restaurantAvgPrice}</span></div>
                             <div><span>營業時間: {restaurantOperatingHours}</span></div>
-                            {/* 注意：評分可能需要從 API 獲取或計算 */}
                             <div><span>評分: (評分未知)</span></div>
-                            <div>
-                                <span>適合：</span>
-                                {purposes.map((purpose, index) => (
-                                    <span key={index} className="border border-secondary rounded-pill"> &nbsp;&nbsp; {purpose} &nbsp;&nbsp;</span>
-                                ))}
-                            </div>
+                            {isRestFavorite && (
+                                <div>
+                                    <span>適合：</span>
+                                    {purposes.map((purpose, index) => (
+                                        <span key={index} className="border border-secondary rounded-pill"> &nbsp;&nbsp; {purpose} &nbsp;&nbsp;</span>
+                                    ))}
+                                </div>
+                            )}
                         </div>
                     </div>
                     <div className="col-1">
@@ -859,7 +897,7 @@
                     </div>
                     <div className="col-2 myRecordsBtn">
                         <div><span>{createdDate}</span></div>
-                        <button className="activity-button" onClick={() => onDelete(favorite.id, favorite.isRestFavorite)}>
+                        <button className="activity-button" onClick={() => onDelete(favorite.id, isRestFavorite)}>
                             <i className="fa-solid fa-trash-can"></i>
                         </button>
                     </div>
