Favorite ongoing fixing notecontent and avg_score

--- a/MySwallab/public/Swallab/nav/nav_demo.html
+++ b/MySwallab/public/Swallab/nav/nav_demo.html
@@ -155,23 +155,23 @@
 
     <!-- 呈現搜尋結果 + API URL -->
     <div class="container">
-        <div id="searchResults"></div>
-        <div id="pastParam"></div>
-        <h1>搜尋結果</h1>
+        <!-- <div id="searchResults"></div> -->
+        <div id="pastParam" style="margin-top: 20px;"></div>
+        <!-- <h1>搜尋結果</h1>
         <h2>符合條件的結果</h2>
         <table id="filteredResultsTable">
             <thead>
                 <tr id="filteredHeaderRow"></tr>
             </thead>
             <tbody id="filteredResultsBody"></tbody>
-        </table>
-        <h2>其他結果</h2>
+        </table> -->
+        <!-- <h2>其他結果</h2>
         <table id="allResultsTable">
             <thead>
                 <tr id="allHeaderRow"></tr>
             </thead>
             <tbody id="allResultsBody"></tbody>
-        </table>
+        </table> -->
     </div>
 
 
