改新增分類

--- a/Swallab/backstage/management_menu2.html
+++ b/Swallab/backstage/management_menu2.html
@@ -111,6 +111,21 @@
                             </div>
                             <div class="col row">
 
+                                <div class="col-12 myClass">
+                                    <h5>
+                                        <label for="classification">餐點分類 : &emsp;&emsp;</label>
+                                    </h5>
+                                    <select name="classification" id="classification">
+                                        <option value="" disabled selected>請選擇...</option>
+                                        <option value="add">新增分類</option>
+                                    </select>
+                                </div>
+                                <div class="col-12 d-none myAddClass">
+                                    <h5>
+                                        <label for="addClass">新增分類 : &emsp;&emsp;</label>
+                                    </h5>
+                                    <input id="addClass" name="addClass">
+                                </div>
                                 
                                 <div class="col-12">
                                     <h5>
@@ -123,20 +138,6 @@
                                         <label onclick="add2()" for="foodPrice">價&emsp;&emsp;格 : &emsp;&emsp;</label>
                                     </h5>
                                     <input type="number" name="foodPrice" id="foodPrice">
-                                </div>
-                                <div class="col-12">
-                                    <h5>
-                                        <label for="classification">餐點分類 : &emsp;&emsp;</label>
-                                    </h5>
-                                    <select name="classification" id="classification">
-                                        <option value="" disabled selected>請選擇...</option>
-                                    </select>
-                                </div>
-                                <div class="col-12">
-                                    <h5>
-                                        <label for="addClass">新增分類 : &emsp;&emsp;</label>
-                                    </h5>
-                                    <input id="addClass" name="addClass">
                                 </div>
                             </div>
                         </div>
