--- a/Swallab/login/login.html
+++ b/Swallab/login/login.html
@@ -34,11 +34,11 @@
                     method: 'POST',
                     body
                 });
-                // let result = await response.json();
-                // console.log(result);
+                let result = await response.json();
+                console.log(result);
 
                 if (response.ok) {
-                    let result = await response.json();
+                    // let result = await response.json();
                     // console.log(result);
                     
                     if (result.token) {
